--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<div class="" id="">
 			<input
 				type="range"
+				id="slider1"
 				min="0"
 				max="100"
 				value="0"
@@ -22,6 +23,7 @@
 		<div class="" id="">
 			<input
 				type="range"
+				id="slider2"
 				min="0"
 				max="12"
 				value="0"
