--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 				autoplay: true,
 				stateMachines: "interaction",
 				onLoad: () => {
+					// Prevent a blurry canvas by using the device pixel ratio
+					riveA.resizeDrawingSurfaceToCanvas();
 					const inputsA = riveA.stateMachineInputs("interaction"); // get state machine
 					sliderRiveA = inputsA.find((i) => i.name === "slider"); // input in rive
 					sliderRiveA.value = 0;
@@ -65,12 +67,23 @@
 					const inputsB = riveB.stateMachineInputs("interaction"); // get state machine
 					sliderRiveB = inputsB.find((i) => i.name === "number"); // input in rive
 					sliderRiveB.value = 0;
+					// Prevent a blurry canvas by using the device pixel ratio
+					riveB.resizeDrawingSurfaceToCanvas();
 				},
 			});
 
 			const setTriggerB = (n) => {
 				sliderRiveB.value = n;
 			};
+			// Resize the drawing surface if the window resizes
+			window.addEventListener(
+				"resize",
+				() => {
+					riveA.resizeDrawingSurfaceToCanvas();
+					riveB.resizeDrawingSurfaceToCanvas();
+				},
+				false
+			);
 		</script>
 	</body>
 </html>
