--- a/interaction-09-01.html
+++ b/interaction-09-01.html
@@ -27,7 +27,7 @@
 		<script>
 			let sliderRiveA;
 			const donutA = new rive.Rive({
-				src: "donut.riv",
+				src: "int-09-01.riv",
 				canvas: document.getElementById("donut_one"),
 				autoplay: true,
 				stateMachines: "interaction",
