--- a/interaction-09-02.html
+++ b/interaction-09-02.html
@@ -27,7 +27,7 @@
 		<script>
 			let sliderRiveB;
 			const donutB = new rive.Rive({
-				src: "donuts.riv",
+				src: "int-09-02.riv",
 				canvas: document.getElementById("donuts_ten"),
 				autoplay: true,
 				stateMachines: "interaction",
