--- a/interaction-09-01.html
+++ b/interaction-09-01.html
@@ -18,7 +18,7 @@
 			/>
 		</div>
 		<div>
-			<canvas id="donut_one" width="500" height="500"></canvas>
+			<canvas id="donut" width="500" height="500"></canvas>
 		</div>
 
 		<!-- RIVE  -->
@@ -27,8 +27,8 @@
 		<script>
 			let sliderRiveA;
 			const donutA = new rive.Rive({
-				src: "int-09-01.riv",
-				canvas: document.getElementById("donut_one"),
+				src: "int-09_01.riv",
+				canvas: document.getElementById("donut"),
 				autoplay: true,
 				stateMachines: "interaction",
 				onLoad: () => {
