--- a/interaction-09-02.html
+++ b/interaction-09-02.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Donut solo</title>
+		<title>Donuts multiple</title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
@@ -27,7 +27,7 @@
 		<script>
 			let sliderRiveB;
 			const donutB = new rive.Rive({
-				src: "int-09-02.riv",
+				src: "int-09_02.riv",
 				canvas: document.getElementById("donuts_ten"),
 				autoplay: true,
 				stateMachines: "interaction",
