--- a/index.html
+++ b/index.html
@@ -6,13 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Donuts</title>
 	</head>
-	
-	 <p>
-	 <a href="./interaction-09-01.html"">link interaction 01</a>
-	 </p>
-	 <p>
-	 <a href="./interaction-09-02.html"">link interaction 02</a>
-	 </p>
+	<body>
+		<p><a href="./pages/interaction-09-01.html">link interaction 01</a></p>
 
+		<p><a href="./pages/interaction-09-02.html">link interaction 02</a></p>
 	</body>
 </html>
