--- a/pages/interaction-09-02.html
+++ b/pages/interaction-09-02.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Donuts multiple</title>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="../src/style.css" />
 	</head>
 	<body>
 		<div class="" id="">
@@ -27,7 +27,7 @@
 		<script>
 			let sliderRiveB;
 			const donutB = new rive.Rive({
-				src: "int-09_02.riv",
+				src: "../rive/int-09_02.riv",
 				canvas: document.getElementById("donuts_ten"),
 				autoplay: true,
 				stateMachines: "interaction",
