add waveforme animation and interaction

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 		<p><a href="./pages/interaction-09-01.html">link interaction 01</a></p>
 
 		<p><a href="./pages/interaction-09-02.html">link interaction 02</a></p>
+
+		<p><a href="./pages/interaction-09-03.html">link interaction 03</a></p>
 	</body>
 </html>
