better difference between the graphs

--- a/pages/interaction-09-03.html
+++ b/pages/interaction-09-03.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="../src/style.css" />
 	</head>
 	<body>
+		<p class="A">Version 1</p>
 		<div class="" id="">
 			<input
 				type="range"
@@ -19,6 +20,8 @@
 		</div>
 		<div>
 			<canvas id="riveCanvasInteract" width="557" height="133"></canvas>
+			<div class="separator"></div>
+			<p class="B">Version 2</p>
 			<canvas id="riveCanvasAnim" width="557" height="133"></canvas>
 		</div>
 
